[package]
name = "sodatte"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ratatui = "0.26"
futures = "0.3"
crossterm  = "0.27"
serde_json = "1"
dotenvy = "0.15.7"
